--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </header>
             <section class="hero row">
                 <div class="slogan">
-                    <h3>Header h3</h3>
+                    <h3>Header h3 very important</h3>
                     <h1>hello world</h1>
                     <p> new akapit</p>
                     <h2>my ideass-changed</h2>
