--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>ćwiczenia z gita zmiana tytuł</title>
+        <title>ćwiczenia z gita zmiana tytuł - zmiana dokonanan zdalnie - komenda git pull</title>
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="style.css">               
     </head>
