Update index.html - change content

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="slogan">
                     <h3>Header h3 very important</h3>
                     <h1>hello world</h1>
-                    <p> new akapit</p>
+                    <p> news akapit</p>
                     <h2>my ideass-changed</h2>
                     <h2>our challenge</h2>
                 </div>
